--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+
+    implementation "org.koin:koin-android-viewmodel:2.0.1"
 }
